name:            yesod-default
version:         1.0.0.20120315
license:         BSD3
license-file:    LICENSE
author:          Patrick Brisbin
maintainer:      Patrick Brisbin <pbrisbin@gmail.com>
synopsis:        Default config and main functions for your yesod application
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Convenient wrappers for your the configuration and
                 execution of your yesod application

library
    if os(windows)
        cpp-options: -DWINDOWS

    build-depends:   base                  >= 4       && < 5
                   , yesod-core            >= 1.0     && < 1.1
                   , warp                  >= 1.2     && < 1.3
                   , wai                   >= 1.2     && < 1.3
                   , wai-extra             >= 1.2     && < 1.3
                   , bytestring            >= 0.9.1.4
                   , transformers          >= 0.2.2   && < 0.3
                   , text                  >= 0.9
                   , directory             >= 1.0
                   , shakespeare-css       >= 0.10.5  && < 0.11
                   , shakespeare-js        >= 0.11    && < 0.12
                   , template-haskell
                   , yaml                  >= 0.6     && < 0.7
                   , network-conduit       >= 0.3     && < 0.4
                   , unordered-containers

    if !os(windows)
         build-depends: unix

    exposed-modules: Yesod.Default.Config
                   , Yesod.Default.Main
                   , Yesod.Default.Util
                   , Yesod.Default.Handlers

    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
