name:            yesod-default
version:         1.1.1
license:         MIT
license-file:    LICENSE
author:          Patrick Brisbin
maintainer:      Patrick Brisbin <pbrisbin@gmail.com>
synopsis:        Default config and main functions for your yesod application
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Convenient wrappers for your the configuration and
                 execution of your yesod application

library
    if os(windows)
        cpp-options: -DWINDOWS

    build-depends:   base                  >= 4       && < 5
                   , yesod-core            >= 1.1     && < 1.2
                   , warp                  >= 1.3     && < 1.4
                   , wai                   >= 1.3     && < 1.4
                   , wai-extra             >= 1.3     && < 1.4
                   , bytestring            >= 0.9.1.4
                   , transformers          >= 0.2.2   && < 0.4
                   , text                  >= 0.9
                   , directory             >= 1.0
                   , shakespeare-css       >= 1.0     && < 1.1
                   , shakespeare-js        >= 1.0     && < 1.1
                   , template-haskell
                   , yaml                  >= 0.8     && < 0.9
                   , network-conduit       >= 0.5     && < 0.7
                   , unordered-containers
                   , hamlet                >= 1.1     && < 1.2
                   , data-default
                   , safe

    if !os(windows)
         build-depends: unix

    exposed-modules: Yesod.Default.Config
                   , Yesod.Default.Main
                   , Yesod.Default.Util
                   , Yesod.Default.Handlers

    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
