name:            yesod-eventsource
version:         1.0.1
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Server-sent events support for Yesod apps.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:
  It's easy to send an event from an HTTP client to a server:
  just send an HTTP request.  However, sending events from the
  server to the client requires more sophisticated approaches.
  Server-sent events (<http://www.w3.org/TR/eventsource/>) are a
  standardized way of pushing events from the server to the
  client.
  .
  This package allows your Yesod application to easily send
  server-sent events.  On the client side, you may use the
  @EventSource@ JavaScript object on browsers that support it
  (<https://developer.mozilla.org/en-US/docs/Server-sent_events/EventSource>)
  or a polyfill for browsers that don't (we support Remy's
  polyfill out-of-the-box, although that requires you to
  explicitly support it).

library
    build-depends:   base                  >= 4        && < 5
                   , yesod-core            >= 1.1      && < 1.2
                   , conduit               >= 0.5      && < 1.1
                   , wai                   >= 1.3      && < 1.5
                   , wai-eventsource       >= 1.3      && < 1.4
                   , blaze-builder
                   , transformers
    exposed-modules: Yesod.EventSource
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
