name:            yesod-eventsource
version:         1.4.1
license:         MIT
license-file:    LICENSE
author:          Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Felipe Lessa <felipe.lessa@gmail.com>
synopsis:        Server-sent events support for Yesod apps.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-eventsource>
extra-source-files: README.md ChangeLog.md

library
    build-depends:   base                  >= 4        && < 5
                   , yesod-core            == 1.4.*
                   , conduit               >= 0.5      && < 1.3
                   , wai                   >= 1.3
                   , wai-eventsource       >= 1.3
                   , wai-extra
                   , blaze-builder
                   , transformers
    exposed-modules: Yesod.EventSource
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
